# pplp

./: .gitignore  CMakeLists.txt  README.md
doc/: aby.md  bf.md  fhe.md  gps.md  oprf.md  pet.md  pir.md  pp.md  proximity.md  ra.md  ref.md
include/: benchmark.h  bloomfilter.h  util.h
src/: client.cc  demo.cc  get_pos.py  get_pos_mobild.py  main.cc  server.cc  test_client.cc  test_server.cc
src/aby/circ_ay/: mytest.cpp  pplp.cpp  pplp.h
src/aby/circ_y/: mytest.cpp  pplp.cpp  pplp.h
src/aby/poly_ay/: mytest.cpp  pplp.cpp  pplp.h
src/aby/poly_y/: mytest.cpp  pplp.cpp  pplp.h
src/ckks_demo/: README.md  ckks_client.cc  ckks_server.cc
src/test/: test_client.cc  test_server.cc
src/test/dgk/src/: Makefile  README  dgk_keygen.cc
src/test/dgk/src/Tests/: Makefile  README.md  main.cc
